fix: xp bar misalignment

--- a/frontend/src/styles/nav.scss
+++ b/frontend/src/styles/nav.scss
@@ -109,6 +109,7 @@ nav {
           //justify-items: center;
           // width: 32ch;
           justify-self: end;
+          right: 0;
           padding: 0.5em;
           border-radius: var(--roundness);
 
